bearbeitet von Marcia Perez Heilig

@startuml
hide empty members
skin rose

class Trip {
    -static current_id: number

    -id: number
    -name: string
    -dest_country: string
    -departure_date: string
    -return_date: string
    -cities: Array<City>
    -tourguide: string
    constructor(name: string, dest_country: string, departure_date: string, return_date: string, tourguide: string)
    static resetCurrentId(): void

}
class Country {

}

class City {
    -name: string
    -duration_of_stay: number
    constructor(name: string, duration_of_stay: number)
}

class Tourguide {

}

Trip "1" --> "1" Country
Trip "1" --> "1" Tourguide
Country "1" --> "1..n" City
@enduml